--- a/_posts/2020-06-15-auc-roc.md
+++ b/_posts/2020-06-15-auc-roc.md
@@ -22,21 +22,21 @@ In this tutorial, we will be learning about the ROC curve.
 
 Let's use convolutional neural networks to detect animals in the frame and predict whether it is a wild animal or not. In the last layer, we will be using sigmoid as an activation function to predict the probability and predict the class(wild animal or not)
 
-<img src="http://drive.google.com/uc?export=view&id=179E4wrpnvhbCfER2wjbRb93VkEYaUha8" width="350" height="350"/>
+<img src="/assets/images/auc_roc/1.png" width="350" height="350"/>
 
 - If you notice the circled animals where the sheep is predicted as wild animal and lion & zebra are predicted as a domestic animals (There can be any reason like bad light, fog, etc.. for this output)
 
  - Now if we fit the sigmoid activation on the last layer the y-axis will become the probability of predicting the type of an animal based on logit values.
 
-<img src="http://drive.google.com/uc?export=view&id=1KD8gsOxve6SjjqFJ4rAncKGyW2PdXgt_" width="350" height="350"/>
+<img src="/assets/images/auc_roc/2.png" width="350" height="350"/>
 
 - In the end, we need to convert these probabilities into classifications. So we can set a threshold value to classify those prbobabilities. let's consider 0.5 as a threshold value and if probability >= threshold then it is classified as a wild animal or if the probability is < threshold then it will be classified as a domestic animal
 
-<img src="http://drive.google.com/uc?export=view&id=1Hj69nrVnHsTOrU3QCKqKC7F_YKxx2dSy" width="350" height="350"/>
+<img src="/assets/images/auc_roc/3.png" width="350" height="350"/>
 
 - Now let's evaluate the performance of the model with a threshold value of 0.5
 
-<img src="http://drive.google.com/uc?export=view&id=1NSKysvkTkGmnM2VFZochcNuWCFxbIaBJ" width="350" height="350"/>
+<img src="/assets/images/auc_roc/4.png" width="350" height="350"/>
 
 - If we see it classified all the animals correctly except 3 animals (sheep, zebra and lion)
 - Where it classified sheep as a wild animal and lion & Zebra as a domestic animals.
@@ -45,7 +45,7 @@ Lets's see the confusion matrix and identify the error
 
 - Let's first understand what is confusion matrix and how it looks
 
-<img src="http://drive.google.com/uc?export=view&id=1XkXw1hCRvGib-D1bTNMfJ-y4he6PFpNb" width="350" height="350"/>
+<img src="/assets/images/auc_roc/16.png" width="350" height="350"/>
 
     True Positives(TP): It is a wild animal and our model predicted it as a wild animal
     False Positives(FP): It is a Domestic animal and our model predicted it as a wild animal
@@ -53,7 +53,7 @@ Lets's see the confusion matrix and identify the error
     False Negatives(FN): It is a Wild animal and our model predicted it as Domestic animal
 - This is confusion matrix and let's replace those 4 values which we got from the model
 
-<img src="http://drive.google.com/uc?export=view&id=1_QIm7A0yAUuB8JC699Zaca4zyWaHoEF8" width="350" height="350"/>
+<img src="/assets/images/auc_roc/17.png" width="350" height="350"/>
 
 - This is how it looks after filling the values
 
@@ -84,11 +84,11 @@ Lets's see the confusion matrix and identify the error
 -Let's try to choose different threshold values and see how our model will work.
     - let the threshold value be 0.05
 
-<img src="http://drive.google.com/uc?export=view&id=1yozYmle6uSJGAEKbPWYqg8QXMEdkUVb_" width="350" height="350"/>
+<img src="/assets/images/auc_roc/5.png" width="350" height="350"/>
 
     Confusion matrix
 
-<img src="http://drive.google.com/uc?export=view&id=17oPwdg_9f3jwVYec2dGS3DGYewLt5qPl" width="350" height="350"/>
+<img src="/assets/images/auc_roc/18.png" width="350" height="350"/>
 
     By Decreasing the threshold value
       False positives will be increased
@@ -98,11 +98,11 @@ Lets's see the confusion matrix and identify the error
 
 - Let's Increase the threshold value to 0.8.
 
-<img src="http://drive.google.com/uc?export=view&id=1zATnB9cE7lkdst6L4H_Se3OQ4xM-Wkn8" width="350" height="350"/>
+<img src="/assets/images/auc_roc/6.png" width="350" height="350"/>
 
     Confusion matrix
 
-<img src="http://drive.google.com/uc?export=view&id=1SJG7_lRyXcd0LWFRN4YnwcV8N9fDqNqs" width="350" height="350"/>
+<img src="/assets/images/auc_roc/19.png" width="350" height="350"/>
 
     By Increasing the threshold value
       False positives will be decreased
@@ -149,21 +149,21 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - If we decrease the threshold value, we are concentrating on predicting wild animals, so it increases the sensitivity and decreases the specificity.
   - If we Increase the threshold value, we are concentrating on predicting domestic animals, so it increases the specificity and decreases the sensitivity.
 
-  <img src="http://drive.google.com/uc?export=view&id=1c-GlyYjnAlbKzZwYt4cvBVd_rqtOV3YO" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/14.png" width="350" height="350"/>
 
   - If we increase TPR, FPR also increases and vice versa.
 
-  <img src="http://drive.google.com/uc?export=view&id=1XMLE-h4MKMWCeAkkLFQNdUhEJDnfuubB" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/15.png" width="350" height="350"/>
 
 ## Let's create ROC curve from scratch
 
   - first let us consider a threshold value of 0.
 
-  <img src="http://drive.google.com/uc?export=view&id=13De5Yx5Jabbybp5FDX7fl6Re_SxmX_T_" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/7.png" width="350" height="350"/>
 
   - Let's build confusion matrix.
 
-  <img src="http://drive.google.com/uc?export=view&id=1sTaPVoPMMg08j8S8ajI1mlv_Tgyw6wZJ" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/20.png" width="350" height="350"/>
 
   - calculate TPR and FPR.
 
@@ -178,17 +178,17 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as low(0) then we correctely classified all wild animals as wild and wrongly classified all domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1W6bLK8VDFpyGwoF6eSIjNA97qeNUOkMW" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/27.png" width="350" height="350"/>
 
     If you see the graph and line from (0,0) to (1,1). Whatever the point on this line means that the proportion of correctly classified samples is equal to the proportion of incorrectly classified samples.
 
   - Let's increase the threshold value a bit to 0.1.
 
-  <img src="http://drive.google.com/uc?export=view&id=17e6NrdSXsXkmuC9FoDt2mQtn481rOB9G" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/8.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=1vzSyOzx8ApGpKfjtqu7ykGcpLyL3T3fs" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/21.png" width="350" height="350"/>
 
   - calculate TPR and FPR.
 
@@ -203,18 +203,18 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.1 then we correctely classified all wild animals as wild and wrongly classified 25% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1NTf7rC8EqgC4wZ7NNVhufHUjLglUCXmR" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/28.png" width="350" height="350"/>
 
 
   - The point (0.25,1). Where the proportion of correctly classified samples is greater than proportion of incorrectly classified samples.
 
   - Let's increase the threshold value a bit to 0.2
 
-  <img src="http://drive.google.com/uc?export=view&id=1CGR2xnCjmmR1Zdp05pim8Cpi92lo2aL8" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/9.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=1uttF_1Y32HEl0ymqXzm9C33djQsHH1zL" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/22.png" width="350" height="350"/>
 
   - calculate TPR and FPR
 
@@ -229,17 +229,17 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.2 then we correctely classified 80% of wild animals as wild and wrongly classified 25% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1-vXZNiq7j6ARwDABMsqMG3LTcZJqwNft" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/29.png" width="350" height="350"/>
 
   - The point (0.25,0.8). Where the proportion of correctly classified samples is greater than proportion of incorrectly classified samples.
 
   - Let's increase the threshold value a bit to 0.5
 
-  <img src="http://drive.google.com/uc?export=view&id=1kchwXIm7zvJyYiMZ2aK3ySRN-2fyuyC0" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/10.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=1yEOwInpy-U69UvLBdYBZn7TV_ev3INht" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/23.png" width="350" height="350"/>
 
   - calculate TPR and FPR
 
@@ -254,17 +254,17 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.2 then we correctely classified 60% of wild animals as wild and wrongly classified 25% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1FvE9Ik-hNji4pwuk75FVhX1418tNRnIl" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/30.png" width="350" height="350"/>
 
     The point (0.25,0.6). Where the proportion of correctly classified samples is greater than proportion of incorrectly classified samples.
 
   - Let's increase the threshold value a bit to 0.8
 
-  <img src="http://drive.google.com/uc?export=view&id=1tos-y57IxBz98qJHAdawh2kmUXi7hztE" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/11.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=11VWx_anYJxqShy_sij__F4lSka1M-bD5" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/24.png" width="350" height="350"/>
 
   - calculate TPR and FPR
 
@@ -279,17 +279,17 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.2 then we correctely classified 60% of wild animals as wild and wrongly classified 0% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1bhuiB84KS9sFGLijlaINCh50dfXclnOv" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/31.png" width="350" height="350"/>
 
   - The point (0.0,0.6). Where the proportion of correctly classified samples is greater than proportion of incorrectly classified samples.
 
   - Let's increase the threshold value a bit to 0.9
 
-  <img src="http://drive.google.com/uc?export=view&id=1j20BpTp2pks_Rd9OVIJnF3IVJWXNzAgV" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/12.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=1RocA8ah5Xg7tcxW4i1KuNqg7dq9W5JXW" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/25.png" width="350" height="350"/>
 
   - calculate TPR and FPR
 
@@ -304,18 +304,18 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.2 then we correctely classified 40% of wild animals as wild and wrongly classified 0% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1SRb8k42gxFDQmQ2wJQ-x_GPakpWbs8QX" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/32.png" width="350" height="350"/>
 
   - The point (0.0,0.4). Where the proportion of correctly classified samples is greater than proportion of incorrectly classified samples.
 
 
   - Let's increase the threshold value a bit to 1.0
 
-  <img src="http://drive.google.com/uc?export=view&id=1mOvgBxlvDFPcUUe2uQKkG6U_gVk6Cr5N" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/13.png" width="350" height="350"/>
 
   - Let's build confusion matrix
 
-  <img src="http://drive.google.com/uc?export=view&id=1jKU5omxvmT4nvmvxnodB4DfLKeGatNDa" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/26.png" width="350" height="350"/>
 
   - calculate TPR and FPR
 
@@ -330,14 +330,14 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
   - When we have threshold value as 0.2 then we correctely classified 0% of wild animals as wild and wrongly classified 0% of domestic animals as wild
   - **ROC graph**
 
-  <img src="http://drive.google.com/uc?export=view&id=1L8CUWBUzi1IkPe8xNNgktcSN14YBRYNs" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/33.png" width="350" height="350"/>
 
   - The point (0.0,0.0). Where we have zero true positives and zero false positives
 
 
 - Let's draw the final ROC curve
 
-  <img src="http://drive.google.com/uc?export=view&id=16gy4-_3CXA5vmz5BlAFL6i3Lzux0UzhY" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/34.png" width="350" height="350"/>
 
     - The ROC graph summarizes all of the confusion matrices that each threshold produced.
     - The best threshold value can be E (0.0, 0.6) i.e 0.8 (where we don't have any False positives)
@@ -356,15 +356,15 @@ One way to solve this is by using **ROC(Receiver Operator Characteristic) Curve*
 ### Let's see this with an example
   - We consider the ROC curve which we got from CNN model.
 
-  <img src="http://drive.google.com/uc?export=view&id=1mAYDrYJ9Z1wnFWCDqBNRaGwxvf3sfzLD" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/35.png" width="350" height="350"/>
 
   - Let's think we also build a model with NN to and we got this ROC curve
 
-  <img src="http://drive.google.com/uc?export=view&id=1vtWiMFhg7BkWa-7NbrWm47WMGLCrKQ3u" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/36.png" width="350" height="350"/>
 
   - Let's combine both into one, and see which model is best
 
-  <img src="http://drive.google.com/uc?export=view&id=1wYtreAmRRn6nE-jgb0VqqjS-72lcGPD2" width="350" height="350"/>
+  <img src="/assets/images/auc_roc/37.png" width="350" height="350"/>
 
   - From this, we can understand that CNN model works better than NN model because the AUC value of CNN is greater then AUC value of NN
 
